# V-REx

./: .env  .gitignore  Pytho{N}.py  README.md  docker-compose.yml  update_Pytho{N}.sh
core/: BaseImage.dockerfile  Dockerfile  entrypoint.sh
core/src/CNPY-source/: CMakeLists.txt
core/src/SLIDE/: CMakeLists.txt  Config_amz.csv
core/src/V-Rex/: main.cpp  makefile
core/src/core-controller/: main.py
core/src/mongo-c-driver/cmake-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  mongoc_install_manifest.txt
core/src/vrex/: EnchancedGenetic.cpp  EnchancedGenetic.hpp  GarbageCollector.cpp  GarbageCollector.hpp  GeneticAlgorithm.hpp  Genome.cpp  Genome.hpp  HallOfFame.cpp  HallOfFame.hpp  MongoDB.cpp  MongoDB.hpp  NeuralGenome.cpp  NeuralGenome.hpp  PopulationManager.cpp  PopulationManager.hpp  Slide.cpp  Slide.hpp  StandardGenetic.cpp  StandardGenetic.hpp  Utils.cpp  Utils.hpp  main.cpp  makefile  test.cpp  test.hpp
core/src/vrex/slide/: Bucket.cpp  Bucket.h  Config.h  DensifiedMinhash.cpp  DensifiedMinhash.h  DensifiedWtaHash.cpp  LSH.cpp  (+15 more)
data-crawler/: Pytho{N}.py  entrypoint.sh  requirements.txt
data-crawler/src/: DataCrawler.py  Logger.py  MongoDB.py  Utils.py  XmlDictParser.py  data_crawler.py  main.py  test.py
data-processor/: requirements.txt
data-processor/src/: DataProcessor.py  FeatureGenerator.py  Logger.py  MongoDB.py  MongoQueue.py  Utils.py  main.py  test.py
front-end/: Dockerfile  Pytho{N}.py  entrypoint.sh
front-end/src/: Logger.py  MongoDB.py  MongoQueue.py  main.py
(+99 files in other folders)
